--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
 
 @import url("../font-awesome/css/font-awesome.min.css");
 @import url("../micons/micons.css");
-@import url("../fonts.css");
+@import url("fonts.css");
 
 
 /* ===================================================================
