--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,8 @@
  *
  * ------------------------------------------------------------------- */
 
-@import url("../font-awesome/css/font-awesome.min.css");
-@import url("../micons/micons.css");
+@import url(".../font-awesome/css/font-awesome.min.css");
+@import url(".../micons/micons.css");
 @import url("fonts.css");
 
 
