--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,22 @@
+/* =================================================================== 
+ *
+ *  Dazzle v1.0 Base Stylesheet
+ *  04-27-2017
+ *  ------------------------------------------------------------------
+ *
+ *  TOC:
+ *  01. reset 
+ *  02. basic/base setup styles
+ *  03. grid
+ *  04. block grids
+ *  05. MISC
+ *
+ * =================================================================== */
+
 
 /* ===================================================================
- *  01. reset
- *  normalize.css v5.0.0 | MIT License |
+ *  01. reset  
+ *  normalize.css v5.0.0 | MIT License | 
  *  github.com/necolas/normalize.css
  *
  * ------------------------------------------------------------------- */
@@ -280,7 +295,7 @@ button {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * Media - (_basic.scss)
  * ------------------------------------------------------------------- */
 
@@ -291,7 +306,7 @@ video {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * Typography resets - (_basic.scss)
  * ------------------------------------------------------------------- */
 
@@ -334,7 +349,7 @@ li {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * links - (_basic.scss)
  * ------------------------------------------------------------------- */
 
@@ -348,7 +363,7 @@ a img {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * inputs - (_basic.scss)
  * ------------------------------------------------------------------- */
 
@@ -467,7 +482,7 @@ textarea {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * medium size devices - (_grid.scss)
  * ------------------------------------------------------------------- */
 
@@ -526,7 +541,7 @@ textarea {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * tablets - (_grid.scss)
  * ------------------------------------------------------------------- */
 
@@ -566,7 +581,7 @@ textarea {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  *  mobile devices - (_grid.scss)
  * ------------------------------------------------------------------- */
 
@@ -603,7 +618,7 @@ textarea {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * small mobile devices - (_grid.scss)
  * ------------------------------------------------------------------- */
 
@@ -661,7 +676,7 @@ textarea {
 
 
 /**
- * Clearing for block grid columns. Allow columns with
+ * Clearing for block grid columns. Allow columns with 
  * different heights to align properly.
  */
 
@@ -674,7 +689,7 @@ textarea {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * medium size devices - (_grid.scss)
  * ------------------------------------------------------------------- */
 
@@ -711,7 +726,7 @@ textarea {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * tablets - (_grid.scss)
  * ------------------------------------------------------------------- */
 
@@ -748,7 +763,7 @@ textarea {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * mobile devices - (_grid.scss)
  * ------------------------------------------------------------------- */
 
@@ -785,7 +800,7 @@ textarea {
 }
 
 
-/* -------------------------------------------------------------------
+/* ------------------------------------------------------------------- 
  * stack on small mobile devices - (_grid.scss)
  * ------------------------------------------------------------------- */
 
